[package]
name = "futures-polling"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/futures-polling"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/futures-polling"
documentation = "https://docs.rs/futures-polling"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[dev-dependencies]
futures-lite = "1.0"
