[package]
name = "futures-polling"
description = "An enum similar to Poll, but containing a future in its Pending variant"
version = "0.1.0"
homepage = "https://github.com/r3v2d0g/futures-polling"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/futures-polling"
documentation = "https://docs.rs/futures-polling"
keywords = ["async", "await", "future", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[dev-dependencies]
futures-lite = "1.0"
